[product unit] Update product name

--- a/src/main/resources/query.properties
+++ b/src/main/resources/query.properties
@@ -21,7 +21,7 @@ sp_FindProductImageByImageType=call sp_FindProductImageByImageType(?);
 sp_CountAllProductImage=call sp_CountAllProductImage();
 sp_CountProductImageWithCondition=call sp_CountProductImageWithCondition(?,?,?,?,?,?,?,?,?);
 #ProductUnit
-sp_InsertNewProductUnit=call sp_InsertNewProductUnit(?,?,?,?,?,?,?,?);
+sp_InsertNewProductUnit=call sp_InsertNewProductUnit(?,?,?,?,?,?,?,?,?);
 sp_UpdateProductUnit=call sp_UpdateProductUnit(?,?,?,?,?,?,?,?);
 sp_UpdateProductUnitProperties=call sp_UpdateProductUnitProperties(?,?,?,?,?);
 sp_DeleteProductUnit=call sp_DeleteProductUnit(?,?);
